--- a/Lab4/Lab4.csproj
+++ b/Lab4/Lab4.csproj
@@ -43,8 +43,9 @@
   <ItemGroup>
     <Compile Include="Generator.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="Processors\GiveTakeProcessor.cs" />
     <Compile Include="Processors\GiveProcessor.cs" />
-    <Compile Include="Processors\IProcessor.cs" />
+    <Compile Include="Processors\Processor.cs" />
     <Compile Include="Processors\TakeProcessor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
